--- a/src/app/home/event/one-event-layout/one-event-layout.page.scss
+++ b/src/app/home/event/one-event-layout/one-event-layout.page.scss
@@ -32,12 +32,12 @@
   width: 100%;
 }
 
-#icon-background{
+#wamp-msg > button{
   margin: 5px;
   background-color: #f5f5f5;
   border-radius: 5px;
 }
 
-#send-message-form{
-  margin: 1.5em 0;
+#send-msg {
+  position: fixed;
 }
