--- a/src/app/profil/profil.page.html
+++ b/src/app/profil/profil.page.html
@@ -6,10 +6,9 @@
 
 <ion-content>
   <ion-item>
-    <ion-avatar slot="start">
+    <ion-avatar>
       <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
     </ion-avatar>
-    <ion-label>{{User['_id']}}</ion-label>
   </ion-item>
   <ion-item>
     <ion-label>
