--- a/src/app/update-user/update-user.page.html
+++ b/src/app/update-user/update-user.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/home/profil"></ion-back-button>
+    </ion-buttons>
     <ion-title>Update User</ion-title>
   </ion-toolbar>
 </ion-header>
