--- a/src/app/home/event/create/create.page.html
+++ b/src/app/home/event/create/create.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <ion-button (click)="uploadPicture()">upload picture</ion-button> 
-  <img *ngIf="picture" src="data:image/jpeg;base64,{{ picture }}" />
+  <img *ngIf="picture" [src]='picture.url' />
     <form #eventForm="ngForm" (submit)="onSubmit(eventForm)">
         <ion-list>
     
