--- a/src/app/home/favorites/favorites.page.html
+++ b/src/app/home/favorites/favorites.page.html
@@ -6,7 +6,7 @@
 <ion-content fullscreen>
   <ion-card *ngFor="let event of events">
     <div [routerLink]="['event', event['_id']]">
-    <img src="https://via.placeholder.com/250x150" />
+    <img src="{{event?.image}}" />
     <ion-card-header>
       <ion-card-subtitle>{{event.adress}} </ion-card-subtitle>
       <ion-card-title>{{event.name}}</ion-card-title>
